i check the bug work well

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -24,6 +24,10 @@
                             <label for="password" class="form-label">Password</label>
                             <input type="password" class="form-control" id="password" name="password" required>
                         </div>
+                        <div class="mb-3">
+                            <label for="confirmPassword" class="form-label">Confirm Password</label>
+                            <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required>
+                        </div>
                         <button type="submit" class="btn btn-light">Register</button>
                     </form>
                 </div>
