--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <title>Register</title>
+    <title>SafeGuard | Register</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
+
 </head>
 <body class="bg-dark text-white">
 <div class="container mt-5">
