:construction: work on api

--- a/src/main/resources/templates/dashboard-create-order.html
+++ b/src/main/resources/templates/dashboard-create-order.html
@@ -62,6 +62,22 @@
                 <option value="OTHER">Autre</option>
             </select>
         </div>
+        <div class="mb-3">
+            <label for="startedAt" class="form-label">Date de début</label>
+            <input type="date" class="form-control" id="startedAt" name="startedAt">
+        </div>
+        <div class="mb-3">
+            <label for="deadline" class="form-label">Date limite</label>
+            <input type="date" class="form-control" id="deadline" name="deadline">
+        </div>
+        <div class="mb-3">
+            <label for="finishedAt" class="form-label">Date de fin</label>
+            <input type="date" class="form-control" id="finishedAt" name="finishedAt">
+        </div>
+        <div class="mb-3">
+            <label for="deliveredAt" class="form-label">Date de livraison</label>
+            <input type="date" class="form-control" id="deliveredAt" name="deliveredAt">
+        </div>
         <button type="submit" class="btn btn-primary">Créer</button>
     </form>
 </div>
