--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -11,7 +11,7 @@
 <body class="bg-dark text-white">
 <div class="sidebar">
     <h2 class="text-white text-center">Dashboard</h2>
-    <a href="/#"><i class="fas fa-home"></i> Home</a>
+    <a href="#"><i class="fas fa-home"></i> Home</a>
     <a href="/dashboard/create-order"><i class="fas fa-plus-circle"></i> Créer une commande</a>
     <a href="/dashboard/settings"><i class="fas fa-cog"></i> Paramètres</a>
     <a href="/dashboard/statistics"><i class="fas fa-chart-bar"></i> Statistiques</a>
@@ -63,7 +63,7 @@
                 <td th:text="${order.price}"></td>
                 <td th:text="${order.paymentMethod}"></td>
                 <td>
-                    <a href="#" class="btn btn-primary btn-sm">Éditer</a>
+                    <a th:href="@{/dashboard/editOrder/{id}(id=${order.id})}" class="btn btn-primary btn-sm">Éditer</a>
                 </td>
             </tr>
             </tbody>
