:rocket: finish edit and delete user

--- a/src/main/resources/templates/edit-user.html
+++ b/src/main/resources/templates/edit-user.html
@@ -11,7 +11,7 @@
 
 <div class="container mt-5">
     <h2>Edit User</h2>
-    <form th:action="@{/editUser/{id}(id=${user.id})}" th:object="${user}" method="post">
+    <form th:action="@{/dashboard/editUser/{id}(id=${user.id})}" th:object="${user}" method="post">
         <input type="hidden" th:field="*{id}">
         <div class="form-group">
             <label for="username">Username</label>
